--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
     background-color: white;
+    color: black;
 }
 
 h1 {
     color: black;
 }
 h2 {
-    color: black;
+    color: white;
+    background-color: blue;
 }
+
