--- a/style.css
+++ b/style.css
@@ -13,4 +13,9 @@ h2 {
     border: 5px solid navy;
     font: 16px arial, sans-serif;
 }
+banner {
+    left: 0px;
+    top: 0px;
+     border: 1px solid red;
+}
 
