--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ h2 {
 banner {
     left: 0px;
     top: 0px;
-     border: 1px solid red;
+    border: 1px solid red;
+}
+logo {
+    left: 0px;
+    top: 0px;
+    border: 1px solid green;
 }
 
