--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
     color: black;
 }
 h2 {
-    font-family: 'lovelyFont', sans-serif;
+    font-family: 'CherryCreamSoda', sans-serif;
     color: white;
     background-color: navy;
     border: 5px solid navy;
