--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: white;
+    background-image: url("tiles.gif");
+    background-repeat: repeat;
     color: black;
     font-family: 'CherryCreamSoda', sans-serif;
    // font: 15px Arial, Helvetica, sans-serif;
