--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
    //grey=#585858
 }
 
+tile-area {
+   background-image: url("tiles.gif");
+   background-repeat: repeat;
+}
+
 main {
     top:50px;
 }
