--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ body {
    //grey=#585858
 }
 
-tile-area {
+tiles-area {
+   top:0px;
+   left:0px;
+   height:40px;
    background-image: url("tiles.gif");
    background-repeat: repeat;
 }
