--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'CherryCreamSoda', Helvetica, sans-serif;
    // font: 15px Arial, Helvetica, sans-serif;
    //red=#EA2020
-   //blue=#82E8F6
+   //light blue=#82E8F6
    //pink=#FFBAD7
    //white=#FFFFFF
    //black=#000000
@@ -25,11 +25,11 @@ main {
 
 h1 {
     color: black;
-    background-color: #82E8F6;
+    //background-color: #82E8F6;
     
     border-radius: 10px;
-    background: #73AD21;
-    padding: 20px; 
+    background: #82E8F6;
+    padding: 10px; 
 //    width: 200px;
     height: 40px; 
     
