--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
 
 h1 {
     color: black;
-    background-color:: #82E8F6;
+    background-color: #82E8F6;
     border-radius: 10px;
     padding: 10px; 
     height: 40px; 
@@ -38,8 +38,8 @@ h2 {
      background-color: #FFBAD7;
 //     border: 5px solid #FFBAD7;
     border-radius: 10px;
-    padding: 10px; 
-    height: 40px;
+    padding: 5px; 
+    height: 30px;
     font: 16px;
 }
 @font-face {
