--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
 
 h1 {
     color: black;
-    background-color: #82E8F6;
+    background: #82E8F6;
     border-radius: 10px;
     padding: 10px; 
     height: 40px; 
