--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ body {
 }
 
 tiles-area {
-   top:10px;
-   left:20px;
-   height:40px;
-   width:100%;
+   //top:10px;
+   //left:20px;
+   //height:40px;
+   //width:100%;
    background-image: url("tiles.gif");
    background-repeat: repeat;
 }
