--- a/style.css
+++ b/style.css
@@ -13,13 +13,11 @@ body {
    //grey=#585858
 }
 
-tiles-area {
-   //top:10px;
-   //left:20px;
-   //height:40px;
-   //width:100%;
-   background-image: url("tiles.gif");
-   background-repeat: repeat;
+textbox-area {
+    color: black;
+    background: #FFFFFF;
+    border-radius: 10px;
+    padding: 10px; 
 }
 
 main {
@@ -32,8 +30,7 @@ h1 {
     border-radius: 10px;
     padding: 10px; 
     height: 40px; 
-    
-}
+    }
 h2 {
     
     color: white;
