--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     background: #82E8F6;
     border-radius: 10px;
     padding: 10px; 
-    height: 40px; 
+    //height: 40px; 
     }
 h2 {
     
