--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h2 {
     border-radius: 10px;
     padding: 5px; 
     height: 30px;
-    font: 16px;
+    //font: 16px;
 }
 @font-face {
 	font-family: 'CherryCreamSoda';
