--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-color: white;
     color: black;
     font-family: 'CherryCreamSoda', Helvetica, sans-serif;
+    font: 15px
    // font: 15px Arial, Helvetica, sans-serif;
    //red=#EA2020
    //light blue=#82E8F6
