--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h2 {
     border-radius: 10px;
     padding: 5px; 
     height: 30px;
-    /font: 18px;
+    font: 18px;
 }
 @font-face {
 	font-family: 'CherryCreamSoda';
