--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: white;
     color: black;
     font-family: 'CherryCreamSoda', Helvetica, sans-serif;
-    font: 15px
+    font-size: 15px;
    // font: 15px Arial, Helvetica, sans-serif;
    //red=#EA2020
    //light blue=#82E8F6
@@ -29,7 +29,8 @@ h1 {
     color: black;
     background: #82E8F6;
     border-radius: 10px;
-    padding: 10px; 
+    padding: 10px;
+    font-size: 22px;
     }
     
 h2 {
@@ -38,7 +39,7 @@ h2 {
     border-radius: 10px;
     padding: 5px; 
     height: 30px;
-    font: 18px;
+    font-size: 18px;
 }
 @font-face {
 	font-family: 'CherryCreamSoda';
