--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
     background: #82E8F6;
     border-radius: 10px;
     padding: 10px;
-    font-size: 40px;
+    font-size: 45px;
     }
     
 h2 {
@@ -28,7 +28,7 @@ h2 {
     border-radius: 10px;
     padding: 5px; 
     height: 30px;
-    font-size: 24px;
+    font-size: 28px;
 }
 
 .textbox-area {
@@ -58,5 +58,5 @@ ul {
 
 li {
     //margin: 0px 0px 3px 0px;
-    padding: 2px;
+    padding: 1x;
 }
