--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ li {
 //    left: 270px;	
 //}
 
-andybgoode {
-    float: right;
-    margin: 0 0 10px 10px;
-}
+//andybgoode {
+ //   float: right;
+//    margin: 0 0 10px 10px;
+//}
