--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
     background-color: white;
     color: black;
     font-family: 'CherryCreamSoda', Helvetica, sans-serif;
-    font-size: 17px;
-   // font: 15px Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-size: 1.0625em;
+    //17px;
    //red=#EA2020
    //light blue=#82E8F6
    //pink=#FFBAD7
@@ -19,7 +20,8 @@ h1 {
     background: #82E8F6;
     border-radius: 10px;
     padding: 10px;
-    font-size: 45px;
+    font-size: 2.8125em; 
+    //45px;
     }
     
 h2 {
@@ -28,11 +30,13 @@ h2 {
     border-radius: 10px;
     padding: 7px; 
     height: 30px;
-    font-size: 28px;
+    font-size: 1.75em;
+    //28px;
 }
 
 h3 {
-    font-size: 21px;
+    font-size: 1.3125em;
+    //21px;
 }
 
 .textbox-area {
@@ -65,12 +69,3 @@ li {
     padding: 1px;
 }
 
-//info-area {
-//    position: relative;
-//    left: 270px;	
-//}
-
-//andybgoode {
- //   float: right;
-//    margin: 0 0 10px 10px;
-//}
