--- a/style.css
+++ b/style.css
@@ -6,13 +6,15 @@ body {
     font-family: 'CherryCreamSoda', Helvetica, sans-serif;
     font-style: normal;
     font-size: 1.0625em;
-    //17px;
-   //red=#EA2020
-   //light blue=#82E8F6
-   //pink=#FFBAD7
-   //white=#FFFFFF
-   //black=#000000
-   //grey=#585858
+   /* 
+   17px;
+   red=#EA2020
+   light blue=#82E8F6
+   pink=#FFBAD7
+   white=#FFFFFF
+   black=#000000
+   grey=#585858
+   */
 }
 
 h1 {
@@ -21,7 +23,7 @@ h1 {
     border-radius: 10px;
     padding: 10px;
     font-size: 2.8125em; 
-    //45px;
+    /*45px;*/
     }
     
 h2 {
@@ -31,12 +33,12 @@ h2 {
     padding: 7px; 
     height: 30px;
     font-size: 1.75em;
-    //28px;
+    /*28px;*/
 }
 
 h3 {
     font-size: 1.3125em;
-    //21px;
+    /*21px;*/
 }
 
 .textbox-area {
@@ -65,7 +67,7 @@ ul {
 }
 
 li {
-    //margin: 0px 0px 3px 0px;
+    /*margin: 0px 0px 3px 0px;*/
     padding: 1px;
 }
 
