Big Photo Caption Width

--- a/style.css
+++ b/style.css
@@ -45,10 +45,10 @@ h3 {
 }
 
 .textbox-area {
-    color: black;
-    background: #FFFFFF;
-    border-radius: 10px;
-    padding: 10px; 
+	color: black;
+	background: #FFFFFF;
+	border-radius: 10px;
+	padding: 10px; 
 }
 
 main {
@@ -69,8 +69,8 @@ ul {
 }
 
 li {
-    /*margin: 0px 0px 3px 0px;*/
-    padding: 1px;
+	/*margin: 0px 0px 3px 0px;*/
+	padding: 1px;
 }
 
 img {
@@ -78,22 +78,22 @@ img {
 }
 
 .menu {
-    color: black;
-    background: #FFFFFF;
-    border-radius: 10px;
-    padding: 10px;  
+	color: black;
+	background: #FFFFFF;
+	border-radius: 10px;
+	padding: 10px;  
 }
 
 
 
 #photoPageControlsAbove {
-  color: blue;width:100%;background-color:#EEEEEE;
+	color: blue;width:100%;background-color:#EEEEEE;
 }
 #photoPageControlsBelow {
-  color: blue;width:100%;background-color:#EEEEEE;
+	color: blue;width:100%;background-color:#EEEEEE;
 }
 .pageControl {
-  cursor: pointer; display: inline;background-color:#EEEEEE;
+	cursor: pointer; display: inline;background-color:#EEEEEE;
 }
 #photosArea {
 	background: #EEEEEE;
@@ -116,13 +116,13 @@ img {
 	display: inline-block;
 }
 .albumArea {
-    padding-top: 20px;
+	padding-top: 20px;
 }
 .albumInfo {
-    padding-left: 5px;padding-top: 10px; background-color:#EEEEEE;
+	padding-left: 5px;padding-top: 10px; background-color:#EEEEEE;
 }
 .albumTitle {
-    font-weight: 900;
+	font-weight: 900;
 }
 .photocellrow {
 	height: 315px;
@@ -164,6 +164,7 @@ img {
 	vertical-align: top;
 	border:none;
 }
+
 .largePolaroids {
 	background: #EEEEEE;
 	margin:0px;
@@ -172,12 +173,10 @@ img {
 	top: 0px;
 	left: 0px;
 	display: none;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    display: none;
-    overflow: hidden;
-    z-index: 99;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	z-index: 98;
 }
 .largePolaroid {
 	background: #EEEEEE;
@@ -191,7 +190,7 @@ img {
 	display: inline-block;
 }
 .largePhotocellrow {	
-    height:100%;
+	height:100%;
 }
 .largePhotocell {
 	background: #FFFFFF;
@@ -211,7 +210,7 @@ img {
 	max-height: 70px;
 }
 .largePhototextcell {
-	background: #FFFFFF;
+	background: #FEFFFF;
 	padding-top: 0px;
 	padding-right: 10px;
 	padding-bottom: 10px;
@@ -219,40 +218,39 @@ img {
 	text-align: left;
 	vertical-align: top;
 	border:none;
-	word-wrap: break-word;
 }
 #bigPhoto1 {
-    display: none;
+	display: none;
 }
 #bigPhoto2 {
-    display: none;
+	display: none;
 }
 #bigPhoto3 {
-    display: none;
+	display: none;
 }
 #controls {
-    z-index: 100;cursor: pointer; position: absolute;display: none
+	z-index: 100;cursor: pointer; position: absolute;display: none
 }
 #buttonStart {
-    cursor: pointer; display: block;background-color: #DDDDDD;padding:2px;
+	cursor: pointer; display: block;background-color: #DDDDDD;padding:2px;
 }
 #buttonPlay {
-    position: fixed; top: 20px; left: 10px;z-index: 100;cursor: pointer; display: none;background: #DDDDDD;padding:2px;
+	position: fixed; top: 20px; left: 10px;z-index: 100;cursor: pointer; display: none;background: #DDDDDD;padding:2px;
 }
 #buttonPause {
-    position: fixed; top: 20px; left: 10px;z-index: 100;cursor: pointer; display: none;background: #DDDDDD;padding:2px;
+	position: fixed; top: 20px; left: 10px;z-index: 100;cursor: pointer; display: none;background: #DDDDDD;padding:2px;
 }
 #buttonPrevious {
-    position: fixed; top: 140px; left: 10px; display: inline;background: #DDDDDD;padding:2px;
+	position: fixed; top: 50%; left: 10px; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 24px; border-radius: 10px;
 }
 #buttonNext {
-    position: fixed; top: 140px; right: 10px; display: inline;background: #DDDDDD;padding:2px;
+	position: fixed; top: 50%; right: 10px; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 24px; border-radius: 10px;
 }
 #buttonClose {
-    position: fixed; top: 20px; right: 10px; display: inline;background: #DDDDDD;padding:2px;
+	position: fixed; top: 20px; right: 10px; display: inline;background: #DDDDDD;padding:2px;
 }
 #buttonDownload {
-    position: fixed; top: 50px; right: 10px; display: inline;background: #DDDDDD;padding:2px;
+	position: fixed; top: 50px; right: 10px; display: inline;background: #DDDDDD;padding:2px;
 }
 
 
