--- a/style.css
+++ b/style.css
@@ -177,13 +177,13 @@ width: 300px;
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	z-index: 98;
+	z-index: 96;
 }
 .largePolaroid {
 	background: #EEEEEE;
 	display: inline-block;
 	padding:1px;
-
+	cursor: pointer; 
 }
 .largePolaroidTable {
 	border: 1px solid #000000;
@@ -230,34 +230,30 @@ width: 300px;
 	display: none;
 }
 #controls {
-	z-index: 100;cursor: pointer; position: absolute;display: none
+	cursor: pointer; position: absolute;display: none
 }
 #buttonStart {
 	cursor: pointer; display: block;background-color: #DDDDDD;padding:2px;
 }
 #buttonPlay {
-/*	position: fixed; top: 20px; left: 10px;z-index: 100;cursor: pointer; display: none;background: #DDDDDD;padding:2px;*/
-	position: fixed; top: 20px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px;
+	position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px;
 }
 #buttonPause {
-/*	position: fixed; top: 20px; left: 10px;z-index: 100;cursor: pointer; display: none;background: #DDDDDD;padding:2px;*/
-	position: fixed; top: 20px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px;
-}
-#buttonPrevious {
-	position: fixed; top: 50%; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 24px; border-radius: 10px;
-}
-#buttonNext {
-	position: fixed; top: 50%; right: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 24px; border-radius: 10px;
+	position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px;
 }
 #buttonClose {
-/*	position: fixed; top: 20px; right: 10px; display: inline;background: #DDDDDD;padding:2px;*/
-	position: fixed; top: 20px; right: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 23px; border-radius: 10px;
+	position: fixed; top: 10px; right: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 23px; border-radius: 10px;
+}
+#buttonPrevious {
+	position: fixed; top: 50%; left: 10px; z-index: 99; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 32px; border-radius: 10px;
+}
+#buttonNext {
+	position: fixed; top: 50%; right: 10px; z-index: 99; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 32px; border-radius: 10px;
 }
 #buttonDownload {
-/*	position: fixed; top: 50px; right: 10px; display: inline;background: #DDDDDD;padding:2px;*/
-	position: fixed; top: 90px; right: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 15px; border-radius: 10px;
-
+	position: fixed; top: 90px; right: 10px; z-index: 98; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 15px; border-radius: 10px;
 }
+
 
 
 
