--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ img {
 }
 .phototextcell {
 	background: #FFFFFF;
+	color: #0000AA;
 	padding-top: 0px;
 	padding-right: 10px;
 	padding-bottom: 10px;
@@ -247,7 +248,7 @@ img {
 	text-align: left;
 	vertical-align: top;
 	border:none;
-width: 300px;
+	width: 300px;
 }
 
 .largePolaroids {
@@ -296,6 +297,7 @@ width: 300px;
 }
 .largePhototextcell {
 	background: #FEFFFF;
+	color: #0000AA;
 	padding-top: 0px;
 	padding-right: 10px;
 	padding-bottom: 10px;
