More people + Testimonials now uses standard js header, menu + footer

--- a/style.css
+++ b/style.css
@@ -148,6 +148,11 @@ padding: 10px 10px 10px 10px;
 	background: url('images/bulletrecord.gif') no-repeat top left;
 	padding: 5px 1px 1px 28px;
 }
+#contactList #liJays
+{
+	background: url('images/bulletrecord.gif') no-repeat top left;
+	padding: 5px 1px 1px 28px;
+}
 #contactList #liWebsite
 {
 	background: url('images/bulletrecord.gif') no-repeat top left;
