--- a/w3.css
+++ b/w3.css
@@ -41,6 +41,7 @@ h1,h2,h3,h4,h5,h6{font-family:CherryCreamSoda, Helvetica, sans-serif;font-weight
 hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-image{max-width:100%;height:auto}img{vertical-align:middle}a{color:inherit}
 .w3-image-abg,.w3-image-abg-3,.w3-image-abg-4,.w3-image-abg-5,.w3-image-abg-6{width:200px}
+.w3-image-abg-x{width:32%;max-width:400px}
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
 .w3-bordered tr,.w3-table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
 .w3-table-all tr:nth-child(odd){background-color:#fff}.w3-table-all tr:nth-child(even){background-color:#f1f1f1}
