--- a/w3.css
+++ b/w3.css
@@ -39,7 +39,9 @@ h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-
 /*h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:4px}*/
 h1,h2,h3,h4,h5,h6{font-family:CherryCreamSoda, Helvetica, sans-serif;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:4px}
 hr{border:0;border-top:1px solid #eee;margin:20px 0}
-.w3-image{max-width:100%;height:auto}img{vertical-align:middle}a{color:inherit}
+.w3-image{max-width:100%;height:auto}img{vertical-align:middle}
+/*a{color:inherit}*/
+a{color:Blue}
 .w3-image-abg,.w3-image-abg-1,.w3-image-abg-2,.w3-image-abg-3,.w3-image-abg-4,.w3-image-abg-5,.w3-image-abg-6,.w3-image-abg-7,.w3-image-insta{width:200px}
 .w3-image-abg-x{width:32%;max-width:400px}
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
