--- a/w3.css
+++ b/w3.css
@@ -84,18 +84,26 @@ a{color:Grey}
 .w3-container:after,.w3-container:before,.w3-panel:after,.w3-panel:before,.w3-row:after,.w3-row:before,.w3-row-padding:after,.w3-row-padding:before,
 .w3-cell-row:before,.w3-cell-row:after,.w3-clear:after,.w3-clear:before,.w3-bar:before,.w3-bar:after{content:"";display:table;clear:both}
 .w3-col,.w3-half,.w3-third,.w3-twothird,.w3-threequarter,.w3-quarter{float:left;width:100%}
-.w3-half-video{float:left;width:100%}
 .w3-col.s1{width:8.33333%}.w3-col.s2{width:16.66666%}.w3-col.s3{width:24.99999%}.w3-col.s4{width:33.33333%}
 .w3-col.s5{width:41.66666%}.w3-col.s6{width:49.99999%}.w3-col.s7{width:58.33333%}.w3-col.s8{width:66.66666%}
 .w3-col.s9{width:74.99999%}.w3-col.s10{width:83.33333%}.w3-col.s11{width:91.66666%}.w3-col.s12{width:99.99999%}
+/*
+.w3-half-video{float:left;width:100%}
+.w3-half-video-iframe{border:none}
+*/
+
 
 @media (min-width:601px){.w3-col.m1{width:8.33333%}.w3-col.m2{width:16.66666%}.w3-col.m3,.w3-quarter{width:24.99999%}.w3-col.m4,.w3-third{width:33.33333%}
 .w3-col.m5{width:41.66666%}.w3-col.m6,.w3-half{width:49.99999%}.w3-col.m7{width:58.33333%}.w3-col.m8,.w3-twothird{width:66.66666%}
 .w3-col.m9,.w3-threequarter{width:74.99999%}.w3-col.m10{width:83.33333%}.w3-col.m11{width:91.66666%}.w3-col.m12{width:99.99999%}}
 
-@media (max-width:560px){.w3-half-video-iframexxxxxxx{width:200px}}
+.embed-container-abg { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; }
+.embed-container-abg iframe, .embed-container-abg object, .embed-container-abg embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:none;}
+
+/*
 @media (max-width:1150px){.w3-half-video-iframe{width:560px;height:315px}}
 @media (min-width:1151px){.w3-half-video{width:49.99999%}.w3-half-video-iframe{width:560px;height:315px}}
+*/
 
 @media (min-width:993px){.w3-col.l1{width:8.33333%}.w3-col.l2{width:16.66666%}.w3-col.l3{width:24.99999%}.w3-col.l4{width:33.33333%}
 .w3-col.l5{width:41.66666%}.w3-col.l6{width:49.99999%}.w3-col.l7{width:58.33333%}.w3-col.l8{width:66.66666%}
@@ -144,8 +152,8 @@ a{color:Grey}
 .w3-display-position{position:absolute}
 .w3-circle{border-radius:50%}
 .w3-round-small{border-radius:2px}.w3-round,.w3-round-medium{border-radius:4px}.w3-round-large{border-radius:8px}.w3-round-xlarge{border-radius:16px}.w3-round-xxlarge{border-radius:32px}
-/*.w3-row-padding,.w3-row-padding>.w3-half,.w3-row-padding>.w3-third,.w3-row-padding>.w3-twothird,.w3-row-padding>.w3-threequarter,.w3-row-padding>.w3-quarter,.w3-row-padding>.w3-col{padding:0 8px}*/
-.w3-row-padding,.w3-row-padding>.w3-half-video,.w3-row-padding>.w3-half,.w3-row-padding>.w3-third,.w3-row-padding>.w3-twothird,.w3-row-padding>.w3-threequarter,.w3-row-padding>.w3-quarter,.w3-row-padding>.w3-col{padding:1px 10px 1px 2px}
+.w3-row-padding,.w3-row-padding>.w3-half,.w3-row-padding>.w3-third,.w3-row-padding>.w3-twothird,.w3-row-padding>.w3-threequarter,.w3-row-padding>.w3-quarter,.w3-row-padding>.w3-col{padding:0 8px}
+/*.w3-row-padding,.w3-row-padding>.w3-half-video,.w3-row-padding>.w3-half,.w3-row-padding>.w3-third,.w3-row-padding>.w3-twothird,.w3-row-padding>.w3-threequarter,.w3-row-padding>.w3-quarter,.w3-row-padding>.w3-col{padding:1px 10px 1px 2px}*/
 /*.w3-container,.w3-panel{padding:0.01em 16px}*/
 .w3-container,.w3-panel{padding:0.01em 4px}
 .w3-panel{margin-top:16px;margin-bottom:16px}
@@ -272,3 +280,44 @@ a{color:Grey}
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
+
+/*ABG photo albums*/
+#photoPageControlsAbove {width:100%}
+#photoPageControlsBelow {width:100%}
+#photosArea {display: inline-block;padding:2px}
+.pageControl {cursor: pointer; display: inline}
+.polaroids {margin:0px;padding:1px}
+.aXpXPhotoArea{display: inline-block}
+.polaroid {display: inline-block;padding:2px;vertical-align:top}
+.polaroidTable {border: 1px solid #000000;border-collapse: collapse;display: inline-block}
+.albumArea {padding-top: 20px}
+.albumInfo {padding-left: 5px;padding-top: 10px}
+/*.albumTitle {font-weight: 900}*/
+.photocellrow {height: 315px;max-height: 315px}
+.photocell {background: #FFFFFF;padding-top: 10px;padding-right: 10px;padding-left: 10px;padding-bottom: 5px;border: none;width: 300px;height: 300px;max-width: 300px;max-height: 300px}
+.photoH {width: 280px;display: block;margin: 0px}
+.photoV {height: 280px;display: block;margin: auto}
+.phototextrow {height: 70px;max-height: 70px}
+.phototextcell {background: #FFFFFF;color: #0000AA;padding-top: 0px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;text-align: left;vertical-align: top;border:none;width: 300px}
+
+.largePolaroids {background: #000000;margin:0px;padding:10px;position: fixed;top: 0px;left: 0px;display: none;width: 100%;height: 100%;text-align: center;z-index: 96}
+.largePolaroid {display: inline-block;padding:1px;cursor: pointer}
+.largePolaroidTable {border: 1px solid #000000;border-collapse: collapse;display: inline-block}
+.largePhotocellrow {height:100%}
+.largePhotocell {background: #FFFFFF;padding-top: 10px;padding-right: 10px;padding-left: 10px;padding-bottom: 5px;border: none}
+.largePhotoH {display: block;margin: 0px;width:100%;}
+.largePhototextrow {height: 70px;max-height: 70px;}
+.largePhototextcell {background: #FEFFFF;color: #0000AA;padding-top: 0px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;text-align: left;vertical-align: top;border:none}
+#bigPhoto1 {display: none}
+#bigPhoto2 {display: none}
+#bigPhoto3 {display: none}
+#controls {cursor: pointer; position: absolute;display: none}
+#buttonStart {cursor: pointer; display: block;padding:2px;width:300px}
+#buttonPlay {position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px}
+#buttonPause {position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px}
+#buttonClose {position: fixed; top: 10px; right: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 23px; border-radius: 10px}
+#buttonPrevious {position: fixed; top: 50%; left: 10px; z-index: 99; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 32px; border-radius: 10px}
+#buttonNext {position: fixed; top: 50%; right: 10px; z-index: 99; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 32px; border-radius: 10px}
+#buttonDownload {position: fixed; top: 90px; right: 10px; z-index: 98; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 15px; border-radius: 10px}
+
+
