--- a/w3.css
+++ b/w3.css
@@ -87,8 +87,9 @@ a{color:Grey}
 .w3-col.s1{width:8.33333%}.w3-col.s2{width:16.66666%}.w3-col.s3{width:24.99999%}.w3-col.s4{width:33.33333%}
 .w3-col.s5{width:41.66666%}.w3-col.s6{width:49.99999%}.w3-col.s7{width:58.33333%}.w3-col.s8{width:66.66666%}
 .w3-col.s9{width:74.99999%}.w3-col.s10{width:83.33333%}.w3-col.s11{width:91.66666%}.w3-col.s12{width:99.99999%}
-/*
+
 .w3-half-video{float:left;width:100%}
+/*
 .w3-half-video-iframe{border:none}
 */
 
@@ -100,10 +101,7 @@ a{color:Grey}
 .embed-container-abg { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; }
 .embed-container-abg iframe, .embed-container-abg object, .embed-container-abg embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:none;}
 
-/*
-@media (max-width:1150px){.w3-half-video-iframe{width:560px;height:315px}}
-@media (min-width:1151px){.w3-half-video{width:49.99999%}.w3-half-video-iframe{width:560px;height:315px}}
-*/
+@media (min-width:1110px){.w3-half-video{width:49.99999%}}
 
 @media (min-width:993px){.w3-col.l1{width:8.33333%}.w3-col.l2{width:16.66666%}.w3-col.l3{width:24.99999%}.w3-col.l4{width:33.33333%}
 .w3-col.l5{width:41.66666%}.w3-col.l6{width:49.99999%}.w3-col.l7{width:58.33333%}.w3-col.l8{width:66.66666%}
