--- a/w3.css
+++ b/w3.css
@@ -310,13 +310,13 @@ a{color:Grey}
 #bigPhoto2 {display: none}
 #bigPhoto3 {display: none}
 #controls {cursor: pointer; position: absolute;display: none}
-
 #buttonStart {cursor: pointer; display: block;padding:2px;width:300px}
-#buttonPlay {position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px}
-#buttonPause {position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 20px; border-radius: 10px}
-#buttonClose {position: fixed; top: 10px; right: 10px; z-index: 100; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 23px; border-radius: 10px}
-#buttonPrevious {position: fixed; top: 50%; left: 10px; z-index: 99; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 32px; border-radius: 10px}
-#buttonNext {position: fixed; top: 50%; right: 10px; z-index: 99; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 32px; border-radius: 10px}
-#buttonDownload {position: fixed; top: 90px; right: 10px; z-index: 98; width: auto; background-color: #DDDDDD; display: inline;padding: 16px; vertical-align: middle;text-align: center; font-weight: bold; font-size: 15px; border-radius: 10px}
+
+#buttonPlay {position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; display: inline; font-weight: bold}
+#buttonPause {position: fixed; top: 10px; left: 10px; z-index: 100; width: auto; display: inline; font-weight: bold}
+#buttonClose {position: fixed; top: 10px; right: 10px; z-index: 100; width: auto; display: inline; font-weight: bold}
+#buttonPrevious {position: fixed; top: 50%; left: 10px; z-index: 99; width: auto; display: inline; font-weight: bold}
+#buttonNext {position: fixed; top: 50%; right: 10px; z-index: 99; width: auto; display: inline; font-weight: bold}
+#buttonDownload {position: fixed; top: 90px; left: 10px; z-index: 98; width: auto; display: inline; font-weight: bold}
 
 
